hphp/hack/test/typecheck/argument_unpacking/unpack_call12_infer.php.exp
File "unpack_call12_infer.php", line 18, characters 21-22:
Invalid argument (Typing[4110])
  File "unpack_call12_infer.php", line 22, characters 32-34:
  Expected `int`
  File "unpack_call12_infer.php", line 15, characters 16-20:
  But got `string`
  File "hackarray.hhi", line 28, characters 52-52:
    via this generic `T`
  File "hackarray.hhi", line 19, characters 77-78:
    via this generic `Tv`
  File "interfaces.hhi", line 123, characters 66-67:
    via this generic `Tv`
  File "interfaces.hhi", line 93, characters 53-54:
    via this generic `Tv`
  File "rx/interfaces.hhi", line 26, characters 52-53:
    via this generic `Tv`
